@@ -574,10 +574,10 @@ class GO_Servermanager_Controller_Installation extends GO_Base_Controller_Abstra
 			$response['data']['serverclient_domains'] = $c['serverclient_domains'];
 		}
 		
-		if($model->automaticInvoice == null)
-			$model->automaticInvoice = new GO_ServerManager_Model_AutomaticInvoice();
-		
-		$response['data'] = array_merge($response['data'], $model->automaticInvoice->getAttributes());
+//		if($model->automaticInvoice == null)
+//			$model->automaticInvoice = new GO_ServerManager_Model_AutomaticInvoice();
+//		
+//		$response['data'] = array_merge($response['data'], $model->automaticInvoice->getAttributes());
 		
 		return parent::afterLoad($response, $model, $params);
 	}
@@ -635,8 +635,10 @@ class GO_Servermanager_Controller_Installation extends GO_Base_Controller_Abstra
 			$model->setAutoInvoice($autoInvoice);
 		}
 		
-		if(isset($params['modules']))
+		if(isset($params['modules'])){
 			$model->setModules( json_decode($params['modules'], true) );
+			unset($params['modules']);
+		}
 		
 		return parent::beforeSubmit($response, $model, $params);
 	}
