@@ -129,4 +129,19 @@ abstract class GO_Customfields_Customfieldtype_Abstract{
 		return true;
 	}
 	
+	/**
+	 * Function to enable this customfield type for some models only.
+	 * When no modeltype is given then this customfield will work on all models.
+	 * Otherwise it will only be available for the given modeltypes.
+	 * 
+	 * Example:
+	 *	return array('GO_Site_Model_Content','GO_Site_Model_Site');
+	 *  
+	 * @return array
+	 */
+	public function supportedModels(){
+		return array();
+	}
+	
+	
 }
